feat: week14 주석추가

--- a/intelligent-system/week14-230605.ipynb
+++ b/intelligent-system/week14-230605.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "# ch 10. 단순선형 회귀\n",
-    "## boston housing"
+    "## boston housing\n",
+    "### 전처리"
    ]
   },
   {
@@ -224,6 +225,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "분석 결과, RM과 MEDV가 선형적인 관계를 보인다. 방의 개수에 따른 집값에 대해 선형회귀를 진행해보자"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -242,6 +251,14 @@
     "y=housing[['MEDV']].values\n",
     "print(X.shape)\n",
     "print(y.shape)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "산점도를 통해 분포를 알아보자"
    ]
   },
   {
@@ -280,6 +297,15 @@
     "def normalization(x:np.array)->np.array:\n",
     "    m,u=x.mean(), x.std()\n",
     "    return (x-m)/u"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "데이터를 전체적으로 가운데로 옮기고 싶다.  \n",
+    "평균 0, 분산1의 값으로 변경해보자. 이를 정규화라고 한다."
    ]
   },
   {
@@ -331,6 +357,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 통계적인 방법 : 정규방정식"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -345,7 +379,7 @@
     }
    ],
    "source": [
-    "#최소자승법\n",
+    "#정규방정식 -최소자승법\n",
     "\n",
     "class NormalEquation(object):\n",
     "    def __init__(self,X):\n",
@@ -384,11 +418,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 경험적인 방법 : 경사하강법"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#경사하강법\n",
     "class LinearRegressionGD(object):\n",
     "    def __init__(self, eta: float = 0.001,\n",
     "                 n_iter: int = 20,\n",
