--- a/computer-vision/03_opencv_matrix.ipynb
+++ b/computer-vision/03_opencv_matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +167,94 @@
     "    cv.waitKey()\n",
     "    cv.destroyAllWindows()\n",
     "fun3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fun4():\n",
+    "    img1 = cv.imread('preview.jpg',cv.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    img2 = img1[200:400, 200:400]\n",
+    "    img3 = img1[200:400, 200:400].copy()\n",
+    "\n",
+    "    img2+=20\n",
+    "\n",
+    "    cv.imshow('img1',img1)\n",
+    "    cv.imshow('img2',img2)\n",
+    "    cv.imshow('img3',img3)\n",
+    "\n",
+    "    cv.waitKey()\n",
+    "    cv.destroyAllWindows()\n",
+    "\n",
+    "fun4()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fun5(): #부분행렬 추출 후 반전 : 255-원래값\n",
+    "    img1 = cv.imread('preview.jpg',cv.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    img2 = img1[200:400, 200:400]\n",
+    "    img3 = img1[200:400, 200:400].copy()\n",
+    "\n",
+    "    img2=255-img2\n",
+    "\n",
+    "    cv.imshow('img1',img1)\n",
+    "    cv.imshow('img2',img2)\n",
+    "    cv.imshow('img3',img3)\n",
+    "\n",
+    "    cv.waitKey()\n",
+    "    cv.destroyAllWindows()\n",
+    "\n",
+    "fun4()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1 1]\n",
+      " [1 1 1 1]\n",
+      " [1 1 1 1]]\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "[[ 0  2  4  6]\n",
+      " [ 8 10 12 14]\n",
+      " [16 18 20 22]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun6():\n",
+    "    mat1 = np.ones((3,4), np.int32)\n",
+    "    mat2 = np.arange(12).reshape(3,4)\n",
+    "    mat3 = mat1+mat2\n",
+    "    mat4 = mat2*2\n",
+    "\n",
+    "\n",
+    "    print(mat1)\n",
+    "    print(mat2)\n",
+    "    print(mat3)\n",
+    "    print(mat4)\n",
+    "\n",
+    "fun6()"
    ]
   },
   {
