--- a/computer-vision/08_geometric_transformation.ipynb
+++ b/computer-vision/08_geometric_transformation.ipynb
@@ -216,7 +216,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. 대칭 변환"
+    "## 6. 대칭 변환\n",
+    "- affine_flip() 함수는 영상을 좌우 대칭, 상하 대칭, 상하 및 좌우 대칭을 수행한 결과를 화면에 출력"
    ]
   },
   {
@@ -249,12 +250,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. 투시변환"
+    "## 7. 투시변환\n",
+    "\n",
+    "- 다음의 예제는 card.bmp라는 트럼프 카드 영상에서 사용자 가 마우스로 카드 모서리 좌표를 선택하면 해당 카드를 반 듯한 직사각형 형태로 투시 변환하여 화면에 출력\n",
+    "\n",
+    "- perspective 프로그램이 처음 실행되면 일단 src 창만 화면\n",
+    "에 나타남\n",
+    "- 이때 마우스를 이용한 좌표 선택은 카드의 좌측상단 조서 리 점부터 시작하여 시계 방향 순서로 선택해야 함\n",
+    "-  마우스로 클릭한 위치는 빨간색 원을 그려서 표시함\n",
+    "- 일반적인 카드의 가로 대세로 크기 비율이 2:3이기 때문에\n",
+    "dst 창에 나타날 영상의 크기를 200×300으로 설정함\n",
+    "-  그결과dst창에다이아K카드가200×300크기로반듯하 게 투시 변환되어 나타나는 것을 확인할 수 있음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
