--- a/computer-vision/08_geometric_transformation.ipynb
+++ b/computer-vision/08_geometric_transformation.ipynb
@@ -17,8 +17,7 @@
     "# 08. 영상의 기하학적 변환\n",
     "## 1. 어파인 변환\n",
     "\n",
-    "- affine_transform() 함수는 tekapo.bmp 호수 영상을 평행사\n",
-    "변형 형태로 변환\n",
+    "- affine_transform() 함수는 tekapo.bmp 호수 영상을 평행사변형 형태로 변환\n",
     "- 입력 영상에서 세 점은 좌측 상단, 우측상단, 우측하단의 모서리 점을 선택하였고, 이 점들이 이동할 결과 영상에서의 위치는 임의로 지정함\n",
     "\n",
     "\n",
@@ -307,6 +306,29 @@
     "cv2.imshow(\"src\",src)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "src = cv2.imread(\"preview.jpg\")\n",
+    "a = src.shape[0]\n",
+    "b = src.shape[1]\n",
+    "\n",
+    "# arr = [[1, 0, 150], [0, 1, 100]] \n",
+    "# arr = [[1, 0.3, 0], [0, 1, 0]] \n",
+    "# arr = [[-1, 0, b], [0, 1, 0]] \n",
+    "arr = [[2, 0, 0], [0, 2, -a]]\n",
+    "\n",
+    "mat = np.array(arr).astype(np.float32)\n",
+    "dst = cv2.warpAffine(src, mat, (0, 0))\n",
+    "cv2.imshow('dst', dst)\n",
+    "cv2.waitKey()"
    ]
   }
  ],
